# catscan

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  main.py  pyproject.toml
airflow/: airflow.cfg  airflow.db  simple_auth_manager_passwords.json.generated
airflow/dags/: tutor.py
app/logging/: logging.py  logging.yaml
app/routers/: __init__.py  admin_routes.py  dependecies.py  routes.py
db/: database.py  models.py
models/: interface.py  observer.py  structures.py
scripts/: init_test_db.py
templates/globals/: page.html
templates/pages/: edit_page.html  new_page.html  pages.html
