[project]
name = "catscan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "colorlog>=6.9.0",
    "fastapi[standard]>=0.115.11",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "lxml>=5.3.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "tool>=0.8.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
dev = "uvicorn processing.main:app --port 8000 --reload"

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "pytest>=8.3.5",
]
lint = []

[tool.ruff]
line-length = 120

lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
lint.ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
known-first-party = ["processing"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]
"**/{tests,docs}/*" = ["E402"]
